Try changing the command path...

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,11 +30,11 @@ architectures:
 
 apps:
     lprint:
-        command: /bin/lprint
+        command: lprint
         plugs: [avahi-control, home, network, network-bind, network-manager, raw-usb]
 
     lprint-server:
-        command: /bin/lprint-server
+        command: lprint-server
         daemon: simple
         plugs: [avahi-control, home, network, network-bind, network-manager, raw-usb]
 
