--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -66,7 +66,7 @@ parts:
 
     scripts:
         plugin: dump
-        source: snap/scripts
+        source: snap/local
         organize:
           lprint-server: bin/
 
