Update Github CI.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,17 +23,41 @@ jobs:
         language: [ cpp ]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout LPrint
+        uses: actions/checkout@v4
 
-      - name: Update build environment
+      - name: Update Build Environment
         run: sudo apt-get update --fix-missing -y
 
-      - name: Install prerequisites
-        run: sudo apt-get install -y avahi-daemon cppcheck libavahi-client-dev libcups2-dev libcupsimage2-dev libjpeg-dev libpam-dev libpng-dev libssl-dev libusb-1.0-0-dev zlib1g-dev
+      - name: Install Prerequisites
+        run: sudo apt-get install -y avahi-daemon cppcheck libavahi-client-dev libjpeg-dev libpam-dev libpng-dev libssl-dev libusb-1.0-0-dev zlib1g-dev
 
-      - name: Install PAPPL
-        run: git clone -b v1.4.x https://github.com/michaelrsweet/pappl.git && cd pappl && ./configure --enable-debug && make && sudo make install
+      - name: Checkout libcups3
+        uses: actions/checkout@v4
+        with:
+          repository: OpenPrinting/libcups
+          path: libcups
+          submodules: recursive
+
+      - name: Configure libcups3
+        run: cd libcups; ./configure --enable-debug --disable-shared
+
+      - name: Build/Install libcups3
+        run: cd libcups; make && sudo make install
+
+      - name: Checkout PAPPL
+        uses: actions/checkout@v4
+        with:
+          repository: michaelrsweet/pappl
+          ref: v1.4.x
+          path: pappl
+          submodules: recursive
+
+      - name: Configure PAPPL
+        run: cd pappl; ./configure --enable-debug --disable-shared
+
+      - name: Build/Install PAPPL
+        run: cd pappl; make && sudo make install
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
