Mark Brother printer driver as experimental (not working with my printers) and add configure option.

--- a/config.h.in
+++ b/config.h.in
@@ -1,7 +1,7 @@
 //
 // Configuration header file for LPrint, a Label Printer Utility
 //
-// Copyright © 2019-2023 by Michael R Sweet.
+// Copyright © 2019-2024 by Michael R Sweet.
 //
 // Licensed under Apache License v2.0.  See the file "LICENSE" for more
 // information.
@@ -10,5 +10,9 @@
 // Version number
 #define LPRINT_VERSION ""
 #define LPRINT_MAJOR_VERSION 1
-#define LPRINT_MINOR_VERSION 1
+#define LPRINT_MINOR_VERSION 3
 #define LPRINT_PATCH_VERSION 0
+
+
+// Enable experimental drivers?
+#define LPRINT_EXPERIMENTAL 0
