--- a/lprint.service.in
+++ b/lprint.service.in
@@ -7,7 +7,7 @@ Requires=avahi-daemon.socket
 WantedBy=multi-user.target
 
 [Service]
-ExecStart=@bindir@/lprint server -o log-file=- -o log-level=info
+ExecStart=@bindir@/lprint server -o admin-group=@ADMINGROUP@ -o auth-service=@AUTHSERV@ @LISTENHOST@-o log-file=@LOGFILE@ -o log-level=info -o server-options=@SOPTIONS@
 Type=simple
 Restart=on-failure
 
