Add clang static analysis target.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,3 +97,6 @@ jobs:
 
     - name: Build/Install LPrint
       run: make && sudo make install
+
+    - name: Static Analysis Using Clang
+      run: make clang
